--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.1234"
         tools:targetApi="31">
-        <activity android:name=".SignActivity"></activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".HomeActivity"></activity>
-        <activity android:name=".AlarmActivity"></activity>
-        <activity android:name=".ChatActivity"></activity>
-        <activity android:name=".PostActivity"></activity>
+        <activity
+            android:name=".ChattingActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity android:name=".SignActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".AlarmActivity" />
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".PostActivity" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
