--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,12 @@
         </activity>
         <activity android:name=".SignActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".HomeActivity1" />
         <activity android:name=".AlarmActivity" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".PostActivity" />
+        <activity android:name=".Chatting2Activity" />
+        <activity android:name=".database" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
